Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-23 (SVN):
    * Moved coop and deathmatch value clash handling from Cvar_Set() to
      callback functions.

2011-12-23 (SVN):
    * Added a callback mechanism to the cvar layer.

2011-12-23 (SVN):
    * When the value is a numeric constant (excluding any macros), use
      Cvar_Set() instead of Cvar_SetValue().
    * quakedef.h: updated beta date stamp to 2011-12-23.

2011-12-22 (SVN):
    * snd_gus.c: Store the dma address received from dos_getmemory() in
      a different pointer variable so we can free it during shutdown.
      This, in case if I ever implement a snd_restart like mechanism.
    * snd_sb.c: Likewise in snd_gus.c. Also made dma_buffer variable
      static to snd_sb.c.

2011-12-22 (SVN):
    * net_dos.c: Changed the order of lan drivers to IPX, BWTCP, WATTCP
      and MPATH.
    * net_bw.c: Skip initialization if -mpath is specified.
    * net_udp.c: Skip initialization if -mpath is specified. Also skip
      initialization if IPX already initialized because IPX+PktDrvr don't
      get along.

2011-12-22 (SVN):
    * cvar.h: Define the flags using 1U (unsigned), instead of simply 1.
    * cvar.c (Cvar_Set): Simplified coop and deathmatch cvars detection
      by replacing the name comparison by variable pointers' comparison.
    * quakedef.h: updated beta date stamp to 2011-12-22.

2011-12-21 (SVN):
    * hexenworld, sv_main.c: Reverted a part of yesterdays password cvars
      patch (what was I thinking..)
    * quakedef.h: updated beta date stamp to 2011-12-21.

2011-12-20 (SVN):
    * hexenworld, cl_main.c (CL_Rcon_f): No need for strlen() to detect an
      empty string.

2011-12-20 (SVN):
    * hexenworld, sv_main.c (SV_CheckVars): Changed to use the CVAR_CHANGED
      flags because the old pointer equality checks were never guaranteed
      to signal a change.

2011-12-20 (SVN):
    * cvar.h: Changed the cvar flags to bit shifts for easier maintaining.