@@ -382,6 +382,12 @@ static void Host_Version_f (void)
 #endif
 
 /* cvar callback functions : */
+void Host_Callback_Notify (cvar_t *var)
+{
+	if (sv.active)
+		SV_BroadcastPrintf ("\"%s\" changed to \"%s\"\n", var->name, var->string);
+}
+
 static void Callback_Deathmatch (cvar_t *var)
 {
 	if (var->integer)
@@ -416,17 +422,23 @@ static void Host_InitLocal (void)
 	Cvar_RegisterVariable (&sys_nostdout);
 	Cvar_RegisterVariable (&sys_throttle);
 
+	Cvar_RegisterVariable (&sys_ticrate);
+	Cvar_RegisterVariable (&sys_adaptive);
+
 	Cvar_RegisterVariable (&host_framerate);
 	Cvar_RegisterVariable (&host_speeds);
 
-	Cvar_RegisterVariable (&sys_ticrate);
 	Cvar_RegisterVariable (&serverprofile);
 
 	Cvar_RegisterVariable (&fraglimit);
 	Cvar_RegisterVariable (&timelimit);
 	Cvar_RegisterVariable (&teamplay);
+	Cvar_SetCallback (&fraglimit, Host_Callback_Notify);
+	Cvar_SetCallback (&timelimit, Host_Callback_Notify);
+	Cvar_SetCallback (&teamplay, Host_Callback_Notify);
 	Cvar_RegisterVariable (&samelevel);
 	Cvar_RegisterVariable (&noexit);
+	Cvar_SetCallback (&noexit, Host_Callback_Notify);
 	Cvar_RegisterVariable (&skill);
 	Cvar_RegisterVariable (&coop);
 	Cvar_RegisterVariable (&deathmatch);
@@ -435,8 +447,6 @@ static void Host_InitLocal (void)
 	Cvar_RegisterVariable (&randomclass);
 
 	Cvar_RegisterVariable (&pausable);
-
-	Cvar_RegisterVariable (&sys_adaptive);
 
 	Cvar_RegisterVariable (&temp1);
 
