@@ -48,6 +48,7 @@ extern	double		realtime;		// not bounded in any way, changed at
 void Host_Init (void);
 void Host_InitCommands (void);
 void Host_Shutdown(void);
+void Host_Callback_Notify (cvar_t *var);	/* callback function for CVAR_NOTIFY */
 /* Host_Error and Host_EndGame doesn't return either due to Sys_Error() or longjmp() */
 void Host_Error (const char *error, ...) __attribute__((__format__(__printf__,1,2), __noreturn__));
 void Host_EndGame (const char *message, ...) __attribute__((__format__(__printf__,1,2), __noreturn__));
